--- a/src/app/components/dialog/addfile/addfile.component.html
+++ b/src/app/components/dialog/addfile/addfile.component.html
@@ -45,7 +45,9 @@
       
 
 </mat-dialog-content>
-
+<ngx-spinner  [fullScreen]="false" type="ball-clip-rotate-multiple" size="medium">
+    <p class="loading">Loading Awesomeness...</p>
+  </ngx-spinner>
  <!-- <mat-dialog-actions>
     <button class="mat-raised-button"(click)="close()">Close</button>
     <button class="mat-raised-button mat-primary"(click)="save()">Save</button>
