--- a/src/app/components/cards/card-table2/card-table2.component.html
+++ b/src/app/components/cards/card-table2/card-table2.component.html
@@ -53,6 +53,13 @@
          
         </mat-cell>
       </ng-container>
+      <ng-container matColumnDef="actions2">
+        <mat-header-cell *matHeaderCellDef > </mat-header-cell>
+        <mat-cell *matCellDef="let row" >
+          <button (click)="Delete(row.id)" ><i class="fa fa-trash"></i></button>
+         
+        </mat-cell>
+      </ng-container>
       
       
   
@@ -63,4 +70,8 @@
     <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]"></mat-paginator>
    
   </div>
+ 
 </div>
+<ngx-spinner  [fullScreen]="false" type="ball-clip-rotate-multiple" size="medium">
+  <p class="loading">Uploading ...</p>
+</ngx-spinner>
