--- a/src/app/components/cards/card-table2/card-table2.component.html
+++ b/src/app/components/cards/card-table2/card-table2.component.html
@@ -1,6 +1,7 @@
 <!-- CSS only -->
 <!-- Latest compiled and minified CSS -->
-
+<head>
+<meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests"></head>
 <div
   class="relative flex flex-col min-w-0 break-words w-full mb-6 shadow-lg rounded"
   [ngClass]="color === 'light' ? 'bg-white' : 'bg-red-900 text-white'"
