--- a/src/app/views/auth/login/login.component.html
+++ b/src/app/views/auth/login/login.component.html
@@ -78,4 +78,6 @@
       </div>
     </div>
   </div>
-  
+  <ngx-spinner  [fullScreen]="false" type="ball-clip-rotate-multiple" size="medium">
+    <p class="loading">Uploading ...</p>
+  </ngx-spinner>
