--- a/src/app/components/dropdowns/user-dropdown/user-dropdown.component.html
+++ b/src/app/components/dropdowns/user-dropdown/user-dropdown.component.html
@@ -11,7 +11,7 @@
       <img
         alt="..."
         class="w-full rounded-full align-middle border-none shadow-lg"
-        src="assets/img/user3.png"
+        src={{url}}
       />
     </span>
   </div>
