--- a/src/app/components/cards/card-table2/card-table2.component.html
+++ b/src/app/components/cards/card-table2/card-table2.component.html
@@ -56,7 +56,7 @@
       <ng-container matColumnDef="actions2">
         <mat-header-cell *matHeaderCellDef > </mat-header-cell>
         <mat-cell *matCellDef="let row" >
-          <button (click)="Delete(row.id)" ><i class="fa fa-trash"></i></button>
+          <button (click)="Delete(row.id,row.name)" ><i class="fa fa-trash"></i></button>
          
         </mat-cell>
       </ng-container>
