--- a/src/app/views/auth/login/login.component.html
+++ b/src/app/views/auth/login/login.component.html
@@ -79,5 +79,5 @@
     </div>
   </div>
   <ngx-spinner  [fullScreen]="false" type="ball-clip-rotate-multiple" size="medium">
-    <p class="loading">Uploading ...</p>
+    <p class="loading">...</p>
   </ngx-spinner>
