--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -91,6 +91,27 @@
             Dashboard
           </a>
         </li>
+        <li class="items-center">
+          <a
+            [routerLink]="['/admin/Monitoring']"
+            class="text-xs uppercase py-3 font-bold block"
+            routerLinkActive
+            #adminDashboard2="routerLinkActive"
+            [ngClass]="
+              adminDashboard2.isActive
+                ? 'text-red-600 hover:text-red-700'
+                : 'text-blueGray-700 hover:text-blueGray-500'
+            "
+          >
+            <i
+              class="fas fa-tv mr-2 text-sm"
+              [ngClass]="
+                adminDashboard2.isActive ? 'opacity-75' : 'text-blueGray-300'
+              "
+            ></i>
+            Monitoring
+          </a>
+        </li>
 
        <!----> 
        <!--<li class="items-center">
