--- a/src/app/components/cards/card-line-chart/card-line-chart.component.html
+++ b/src/app/components/cards/card-line-chart/card-line-chart.component.html
@@ -7,7 +7,7 @@
         <h6 class="uppercase text-blueGray-100 mb-1 text-xs font-semibold">
           Overview
         </h6>
-        <h2 class="text-white text-xl font-semibold">Sales value</h2>
+        <h2 class="text-white text-xl font-semibold">user growth rate</h2>
       </div>
     </div>
   </div>
