--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -1,3 +1,38 @@
+<style>
+  .dropbtn {
+   
+    
+
+    border: none;
+  }
+  
+  .dropdown {
+    position: relative;
+    display: inline-block;
+  }
+  
+  .dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f1f1f1;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+  }
+  
+  .dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+  }
+  
+  .dropdown-content a:hover {background-color: #ddd;}
+  
+  .dropdown:hover .dropdown-content {display: block;}
+  
+  .dropdown:hover .dropbtn {background-color: #3e8e41;}
+  </style>
 <nav
   class="md:left-0 md:block md:fixed md:top-0 md:bottom-0 md:overflow-y-auto md:flex-row md:flex-nowrap md:overflow-hidden shadow-xl bg-white flex flex-wrap items-center justify-between relative md:w-64 z-10 py-4 px-6"
 >
@@ -83,7 +118,7 @@
             "
           >
             <i
-              class="fas fa-tv mr-2 text-sm"
+              class="fa fa-bar-chart mr-2 text-sm"
               [ngClass]="
                 adminDashboard.isActive ? 'opacity-75' : 'text-blueGray-300'
               "
@@ -94,7 +129,7 @@
         <li class="items-center">
           <a
             [routerLink]="['/admin/Monitoring']"
-            class="text-xs uppercase py-3 font-bold block"
+            class="text-xs uppercase py-3 font-bold block dropdown"
             routerLinkActive
             #adminDashboard2="routerLinkActive"
             [ngClass]="
@@ -109,32 +144,58 @@
                 adminDashboard2.isActive ? 'opacity-75' : 'text-blueGray-300'
               "
             ></i>
-            Monitoring
+            Monitoring Server 1
+          
           </a>
+        
         </li>
-
-       <!----> 
-       <!--<li class="items-center">
+        <li class="items-center">
           <a
-            [routerLink]="['/admin/settings']"
-            class="text-xs uppercase py-3 font-bold block"
+            [routerLink]="['/admin/Monitoring2']"
+            class="text-xs uppercase py-3 font-bold block dropdown"
             routerLinkActive
-            #adminSettings="routerLinkActive"
+            #adminDashboard3="routerLinkActive"
             [ngClass]="
-              adminSettings.isActive
+              adminDashboard3.isActive
                 ? 'text-red-600 hover:text-red-700'
                 : 'text-blueGray-700 hover:text-blueGray-500'
             "
           >
             <i
-              class="fas fa-tools mr-2 text-sm"
+              class="fas fa-tv mr-2 text-sm"
               [ngClass]="
-                adminSettings.isActive ? 'opacity-75' : 'text-blueGray-300'
+                adminDashboard3.isActive ? 'opacity-75' : 'text-blueGray-300'
               "
             ></i>
-            Settings
+            Monitoring Server 2
+          
           </a>
-        </li>-->
+          
+        </li>
+        <li class="items-center">
+          <a
+            [routerLink]="['/admin/Monitoring3']"
+            class="text-xs uppercase py-3 font-bold block "
+            routerLinkActive
+            #adminDashboard4="routerLinkActive"
+            [ngClass]="
+              adminDashboard4.isActive
+                ? 'text-red-600 hover:text-red-700'
+                : 'text-blueGray-700 hover:text-blueGray-500'
+            "
+          >
+            <i
+              class="fas fa-tv mr-2 text-sm"
+              [ngClass]="
+                adminDashboard4.isActive ? 'opacity-75' : 'text-blueGray-300'
+              "
+            ></i>
+            Monitoring Server 3
+          
+          </a>
+         
+        </li>
+      
 
         <li class="items-center">
           <a
@@ -180,8 +241,7 @@
           </a>
         </li>-->
       </ul>
-
-     
+      
 
      
       
