--- a/src/app/views/admin/monitoring/monitoring.component.html
+++ b/src/app/views/admin/monitoring/monitoring.component.html
@@ -1,65 +1,75 @@
 
 <div
-  class="relative">
+class="relative">
+
+<div class="container-fluid">
+  <div class="form-row">
+
+    <div class="col-3">
+      <object class="grafana-iframe"
+            data="https://vm3.westeurope.cloudapp.azure.com:3000/d-solo/rYdddlPWk/node-exporter-full?orgId=1&refresh=1m&var-DS_PROMETHEUS=default&var-job=node&var-node=51.124.210.200%3A9100&var-diskdevices=%5Ba-z%5D%2B%7Cnvme%5B0-9%5D%2Bn%5B0-9%5D%2B%7Cmmcblk%5B0-9%5D%2B&from=now-5m&to=now&refresh=1s&panelId=20" width="100%" height="200" ></object>
+      
+    </div>
+
+    <div class="col-3">
+      
+      <object class="grafana-iframe"
+      data="https://vm3.westeurope.cloudapp.azure.com:3000/d-solo/rYdddlPWk/node-exporter-full?orgId=1&refresh=1m&var-DS_PROMETHEUS=default&var-job=node&var-node=51.124.210.200%3A9100&var-diskdevices=%5Ba-z%5D%2B%7Cnvme%5B0-9%5D%2Bn%5B0-9%5D%2B%7Cmmcblk%5B0-9%5D%2B&from=now-5m&to=now&refresh=1s&panelId=16" width="100%" height="200" ></object>
+
+    </div>
+    <div class="col-3">
+      <object class="grafana-iframe"
+      data="https://vm3.westeurope.cloudapp.azure.com:3000/d-solo/rYdddlPWk/node-exporter-full?orgId=1&refresh=1m&var-DS_PROMETHEUS=default&var-job=node&var-node=51.124.210.200%3A9100&var-diskdevices=%5Ba-z%5D%2B%7Cnvme%5B0-9%5D%2Bn%5B0-9%5D%2B%7Cmmcblk%5B0-9%5D%2B&from=now-5m&to=now&refresh=1s&panelId=154" width="100%" height="200" ></object>
+      
+    </div>
+   
+
+   
+    <div class="col-3">
+      <div class="row">
+        <div class="col">
+          <object class="grafana-iframe"
+          data="https://vm3.westeurope.cloudapp.azure.com:3000/d-solo/rYdddlPWk/node-exporter-full?orgId=1&refresh=1m&var-DS_PROMETHEUS=default&var-job=node&var-node=51.124.210.200%3A9100&var-diskdevices=%5Ba-z%5D%2B%7Cnvme%5B0-9%5D%2Bn%5B0-9%5D%2B%7Cmmcblk%5B0-9%5D%2B&from=now-5m&to=now&refresh=1s&panelId=15" width="130%" height="100" ></object>
+        </div>
+        <div class="col">
+         
+          <object class="grafana-iframe"
+          data="https://vm3.westeurope.cloudapp.azure.com:3000/d-solo/rYdddlPWk/node-exporter-full?orgId=1&refresh=1m&var-DS_PROMETHEUS=default&var-job=node&var-node=51.124.210.200%3A9100&var-diskdevices=%5Ba-z%5D%2B%7Cnvme%5B0-9%5D%2Bn%5B0-9%5D%2B%7Cmmcblk%5B0-9%5D%2B&from=now-5m&to=now&refresh=1s&panelId=14" width="100%" height="100" ></object>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col">
+          <object class="grafana-iframe"
+          data="https://vm3.westeurope.cloudapp.azure.com:3000/d-solo/rYdddlPWk/node-exporter-full?orgId=1&refresh=1m&var-DS_PROMETHEUS=default&var-job=node&var-node=51.124.210.200%3A9100&var-diskdevices=%5Ba-z%5D%2B%7Cnvme%5B0-9%5D%2Bn%5B0-9%5D%2B%7Cmmcblk%5B0-9%5D%2B&from=now-5m&to=now&refresh=1s&panelId=23" width="130%" height="100" ></object>
+        </div>
+        <div class="col">
+          <object class="grafana-iframe"
+          data="https://vm3.westeurope.cloudapp.azure.com:3000/d-solo/rYdddlPWk/node-exporter-full?orgId=1&refresh=1m&var-DS_PROMETHEUS=default&var-job=node&var-node=51.124.210.200%3A9100&var-diskdevices=%5Ba-z%5D%2B%7Cnvme%5B0-9%5D%2Bn%5B0-9%5D%2B%7Cmmcblk%5B0-9%5D%2B&from=now-5m&to=now&refresh=1s&panelId=75" width="100%" height="100" ></object>
+        </div>
+      </div>
+    </div>
   
-  <div class="container-fluid">
-    <div class="form-row">
-
-      <div class="col-3">
-        <iframe src="https://vm3.westeurope.cloudapp.azure.com:3000/d-solo/rYdddlPWk/node-exporter-full?orgId=1&refresh=1m&var-DS_PROMETHEUS=default&var-job=node&var-node=51.124.210.200%3A9100&var-diskdevices=%5Ba-z%5D%2B%7Cnvme%5B0-9%5D%2Bn%5B0-9%5D%2B%7Cmmcblk%5B0-9%5D%2B&from=1667854399026&to=1667855299026&panelId=20" width="100%" height="200" frameborder="0"></iframe>
-      </div>
-
-      <div class="col-3">
-        <iframe src="https://vm3.westeurope.cloudapp.azure.com:3000/d-solo/rYdddlPWk/node-exporter-full?orgId=1&refresh=1m&var-DS_PROMETHEUS=default&var-job=node&var-node=51.124.210.200%3A9100&var-diskdevices=%5Ba-z%5D%2B%7Cnvme%5B0-9%5D%2Bn%5B0-9%5D%2B%7Cmmcblk%5B0-9%5D%2B&from=1667854757644&to=1667855657644&panelId=16" width="100%" height="200" frameborder="0"></iframe>
-
-      </div>
-      <div class="col-3">
-        <iframe src="https://vm3.westeurope.cloudapp.azure.com:3000/d-solo/rYdddlPWk/node-exporter-full?orgId=1&refresh=1m&var-DS_PROMETHEUS=default&var-job=node&var-node=51.124.210.200%3A9100&var-diskdevices=%5Ba-z%5D%2B%7Cnvme%5B0-9%5D%2Bn%5B0-9%5D%2B%7Cmmcblk%5B0-9%5D%2B&from=1667855230647&to=1667856130648&panelId=154" width="100%" height="200" frameborder="0"></iframe>
-      </div>
-     
-
-     
-      <div class="col-3">
-        <div class="row">
-          <div class="col">
-            <iframe src="https://vm3.westeurope.cloudapp.azure.com:3000/d-solo/rYdddlPWk/node-exporter-full?orgId=1&refresh=1m&var-DS_PROMETHEUS=default&var-job=node&var-node=51.124.210.200%3A9100&var-diskdevices=%5Ba-z%5D%2B%7Cnvme%5B0-9%5D%2Bn%5B0-9%5D%2B%7Cmmcblk%5B0-9%5D%2B&from=1667855039465&to=1667855939465&panelId=15" width="130%" height="100" frameborder="0"></iframe>
-       
-          </div>
-          <div class="col">
-            <iframe src="https://vm3.westeurope.cloudapp.azure.com:3000/d-solo/rYdddlPWk/node-exporter-full?orgId=1&refresh=1m&var-DS_PROMETHEUS=default&var-job=node&var-node=51.124.210.200%3A9100&var-diskdevices=%5Ba-z%5D%2B%7Cnvme%5B0-9%5D%2Bn%5B0-9%5D%2B%7Cmmcblk%5B0-9%5D%2B&from=1667856669533&to=1667857569534&panelId=14" width="100%" height="100" frameborder="0"></iframe>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col">
-            <iframe src="https://vm3.westeurope.cloudapp.azure.com:3000/d-solo/rYdddlPWk/node-exporter-full?orgId=1&refresh=1m&var-DS_PROMETHEUS=default&var-job=node&var-node=51.124.210.200%3A9100&var-diskdevices=%5Ba-z%5D%2B%7Cnvme%5B0-9%5D%2Bn%5B0-9%5D%2B%7Cmmcblk%5B0-9%5D%2B&from=1667857736232&to=1667858636232&panelId=23"  width="130%" height="100" frameborder="0"></iframe>
-       
-          </div>
-          <div class="col">
-            <iframe src="https://vm3.westeurope.cloudapp.azure.com:3000/d-solo/rYdddlPWk/node-exporter-full?orgId=1&refresh=1m&var-DS_PROMETHEUS=default&var-job=node&var-node=51.124.210.200%3A9100&var-diskdevices=%5Ba-z%5D%2B%7Cnvme%5B0-9%5D%2Bn%5B0-9%5D%2B%7Cmmcblk%5B0-9%5D%2B&from=1667857829854&to=1667858729854&panelId=75" w  width="100%" height="100" frameborder="0"></iframe>
-          </div>
-        </div>
-      </div>
     
-      
-    </div>
-    <div><p></p></div>
-    <div class="row">
-      <div class="col-4">
-        <iframe src="https://vm3.westeurope.cloudapp.azure.com:3000/d-solo/rYdddlPWk/node-exporter-full?orgId=1&refresh=1m&var-DS_PROMETHEUS=default&var-job=node&var-node=51.124.210.200%3A9100&var-diskdevices=%5Ba-z%5D%2B%7Cnvme%5B0-9%5D%2Bn%5B0-9%5D%2B%7Cmmcblk%5B0-9%5D%2B&from=1667768284719&to=1667769184719&panelId=74"  width="100%" height="350" frameborder="0"></iframe>
-      </div>
-      
-      <div class="col-4">
-        <iframe src="https://vm3.westeurope.cloudapp.azure.com:3000/d-solo/rYdddlPWk/node-exporter-full?orgId=1&refresh=1m&var-DS_PROMETHEUS=default&var-job=node&var-node=51.124.210.200%3A9100&var-diskdevices=%5Ba-z%5D%2B%7Cnvme%5B0-9%5D%2Bn%5B0-9%5D%2B%7Cmmcblk%5B0-9%5D%2B&from=1667855537440&to=1667856437440&panelId=78" width="100%" height="350" frameborder="0"></iframe>
-
-      </div>
-      <div class="col-4">
-        <iframe src="https://vm3.westeurope.cloudapp.azure.com:3000/d-solo/rYdddlPWk/node-exporter-full?orgId=1&refresh=1m&var-DS_PROMETHEUS=default&var-job=node&var-node=51.124.210.200%3A9100&var-diskdevices=%5Ba-z%5D%2B%7Cnvme%5B0-9%5D%2Bn%5B0-9%5D%2B%7Cmmcblk%5B0-9%5D%2B&from=1667856160924&to=1667857060924&panelId=152" width="100%" height="350" frameborder="0"></iframe>
-
-      </div>
-     
-    </div>
-    <div class="row">
-  
-    </div>
   </div>
+  <div><p></p></div>
+  <div class="row">
+    <div class="col-4">
+      <object class="grafana-iframe"
+          data="https://vm3.westeurope.cloudapp.azure.com:3000/d-solo/rYdddlPWk/node-exporter-full?orgId=1&refresh=1m&var-DS_PROMETHEUS=default&var-job=node&var-node=51.124.210.200%3A9100&var-diskdevices=%5Ba-z%5D%2B%7Cnvme%5B0-9%5D%2Bn%5B0-9%5D%2B%7Cmmcblk%5B0-9%5D%2B&from=now-5m&to=now&refresh=1s&panelId=74" width="100%" height="350" ></object>
+    </div>
+    
+    <div class="col-4">
+      <object class="grafana-iframe"
+      data="https://vm3.westeurope.cloudapp.azure.com:3000/d-solo/rYdddlPWk/node-exporter-full?orgId=1&refresh=1m&var-DS_PROMETHEUS=default&var-job=node&var-node=51.124.210.200%3A9100&var-diskdevices=%5Ba-z%5D%2B%7Cnvme%5B0-9%5D%2Bn%5B0-9%5D%2B%7Cmmcblk%5B0-9%5D%2B&from=now-5m&to=now&refresh=1s&panelId=78" width="100%" height="350" ></object>
+    </div>
+    <div class="col-4">
+      <object class="grafana-iframe"
+      data="https://vm3.westeurope.cloudapp.azure.com:3000/d-solo/rYdddlPWk/node-exporter-full?orgId=1&refresh=1m&var-DS_PROMETHEUS=default&var-job=node&var-node=51.124.210.200%3A9100&var-diskdevices=%5Ba-z%5D%2B%7Cnvme%5B0-9%5D%2Bn%5B0-9%5D%2B%7Cmmcblk%5B0-9%5D%2B&from=now-5m&to=now&refresh=1s&panelId=152" width="100%" height="350" ></object>
+    </div>
+   
+  </div>
+  <div class="row">
+
+  </div>
+</div>
 <div>
